[package]
name = "sa-fe-worker"
version = "0.1.0"
authors = ["Scott Donnelly <scott@donnel.ly>"]
description = "WASM query point extractor to extract candidate stars from an image"
license = "UNLICENSED"
repository = "git@github.com:sdd/sa-fe-worker.git"
edition = "2018"

# See https://rustwasm.github.io/wasm-pack/book/tutorials/npm-browser-packages/template-deep-dive/cargo-toml.html
# for all the deets on what's in here

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
photon-rs = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
web-sys = "0.3.51"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']